<resources>
    <string name="app_name">3 Choose 2</string>
    <string name="launchscreen_instruction1">Pick your priorities</string>
    <string name="launchscreen_instruction2">McGill Version \nHelps you find balance in life</string>
    <string name="activity_set_sleep_hours_instruction">Enter the hours of \nsleep you desire</string>
    <string name="activity_set_school_hours_instruction">Enter the hours of \nschooling you desire</string>
    <string name="activity_set_social_hours_instruction">Enter the hours of socializing you desire</string>
    <string name="school"><b>School</b></string>
    <string name="social"><b>Social Life</b></string>
    <string name="sleep"><b>Sleep</b></string>
    <string name="result">Result</string>

    <string name="title_activity_launch_screen">LaunchScreen</string>
    <string name="next">Next</string>
    <string name="hint_number">0</string>
    <string name="swipe_up">Swipe up to continue</string>

    <string name="title_activity_exit_screen">ExitScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="final_message">In the end, life is not about trying to do as many things as possible in the shortest period of time.
        We all know that we can only choose two out of school, social, and sleep.\n<i>But we must balance all three factors well in daily lives...</i>\nOtherwise, we won't be able to survive in McGill for long.\nWe hope we gave you a hint in how to better balance your life.
    \nMost importantly, we wish you the best life in McGill, take care :)</string>


</resources>
