<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2ED1B2F"
    tools:context=".SetSleepHours">

    <TextView
        android:id="@+id/launchscreen_instruction1"
        android:layout_width="306dp"
        android:layout_height="79dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="@string/activity_set_sleep_hours_instruction"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:text="@string/activity_set_sleep_hours_instruction" />

    <Button
        android:id="@+id/next_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/sleep_hours_int"
        android:layout_width="306dp"
        android:layout_height="79dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_number"
        android:inputType="number"
        app:fontFamily="@font/baloo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>